# percona-server-mongodb-operator

./: .client-secret.json.enc  .cloud-secret.yml.enc  .cursorrules  .e2eignore  .editorconfig  .github-test  .gitignore  .gitmodules  .snyk  .travis.yml  3q  ADOPTERS.md  CODEOWNERS  CONTRIBUTING.md  Gopkg.toml  Jenkinsfile  LICENSE  LICENSE-HEADER  Makefile  README.md  _config.yml  architecture.md  backup-restorer.sh  client-secret.json.enc  cloud-secret.yml.enc  code-of-conduct.md  cr.yaml  cw-rbac.yaml.1  go.mod  go.sum  index.html  index.md  log  privs.sh  psmdb-operator-architecture.md  psmdb-operator-configure.md  psmdb-operator-install.md  pyproject.toml  requirements.txt  runtime.txt
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
Source/: ._conf.py  architecture.rst  backups.rst  conf.py  constraints.rst  custom-registry.rst  kubernetes.rst  openshift.rst  operator.rst  private.rst  scaling.rst  storage.rst  users.rst
_data/: navigation.yml
clientcmd/: clientcmd.go
config/: config.yaml
configure/: arbiter.md  backups.md  constraints.md  expose.md  operator.md  private.md  secrets.md  storage.md  users.md
deploy/: backup-aws.yaml  backup-gcs.yaml  backup-restore.yaml  backup-s3.yaml  backup-secrets.yaml  bundle.yaml  cfg-rs.yaml  clustersync.yaml  cr-minimal.yaml  cr.yaml  crd.yaml  cw-bundle.yaml  cw-operator.yaml  cw-rbac.yaml  deploy-validationhook.sh  ingress.yaml  mongodb-users.yaml  mongodbdatabase-sample.yaml  mongodbuser-multicluster-sample.yaml  mongodbuser-sample.yaml  mongos.yaml  operator.yaml  rbac.yaml  rs.yaml  secrets.yaml  sse-secret.yaml  ssl-secrets.yaml  steps.txt  test-secret.yaml  user-role.yaml  validationWebhook.yaml
docs/: dynamic-user-database-management.md  index.md  psmdb-operator-architecture.md  psmdb-operator-configure.md  psmdb-operator-install.md
e2e-tests/: README.md  apply  build  build-and-run  conftest.py  functions  k8s_collector.py  manifest  release_images  release_versions  run  run-backups.csv  run-distro.csv  run-minikube.csv  run-pr.csv  run-release-arm64.csv  run-release.csv  run-small.csv  runner  test_pytest_wrapper.py  tools.py  vars
e2e-tests/pytest/: .gitignore  Makefile  pyproject.toml
e2e-tests/pytest/screw/: k8s.py
ext/: psdom.py
healthcheck/: health.go  health_test.go  healthcheck.go  healthcheck_test.go  main_test.go  readiness.go  readiness_test.go  version.go
install/: custom-registry.md  index.md  kubernetes.md  monitoring.md  openshift.md  scaling.md
internal/: container.go  labels.go  pvc.go  resources.go  resources_test.go  secrets.go  types.go  util.go  util_test.go  version.go
javascripts/: timeline-setter.js
pbm-patched/: .dockerignore  .gitignore  .golangci.yml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum
source/: System-Requirements.rst  TLS.rst  (+36 more)
(+1887 files in other folders)
