[project]
name = "psmdb-pytest"
version = "0.1.0"
description = "Tests for PSMDB Operator"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.5.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-dependency>=0.6.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.12",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(levelname)s %(asctime)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%SZ"
addopts = "--html=e2e-tests/reports/report.html --self-contained-html --json-report --json-report-file=e2e-tests/reports/report.json --junitxml=e2e-tests/reports/report.xml"
render_collapsed = "all"

[[tool.mypy.overrides]]
module = ["pytest_html.*"]
follow_untyped_imports = true
strict = true

[tool.ruff]
line-length = 99
