[project]
name = "psmdb-pytest"
version = "0.1.0"
description = "Tests for PSMDB Operator"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=8.5.0",
    "junitparser>=3.2.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-dependency>=0.6.0",
    "pytest-html>=4.1.1",
    "pytest-html-merger>=0.1.0",
    "pytest-json-report>=1.5.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "ruff>=0.11.12",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
addopts = "-v -s --self-contained-html"
render_collapsed = "all"
junit_family = "xunit2"
junit_suite_name = "psmdb-e2e"

[[tool.mypy.overrides]]
module = ["pytest_html.*"]
follow_untyped_imports = true
strict = true

[tool.ruff]
line-length = 99
